Fix contrast errors on Product Detail page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $primary-accent-color: #7B4734;
-$secondary-accent-color: #867C77;
+$secondary-accent-color: #5d5451;
 $ternary-accent-color: #D9CFC9;
 
 $primary-background-color: #F4F4F4;
